<resources>
    <string name="app_name">Newspaper Control</string>
    <string name="avatar_description">Default newsboy avatar</string>
    <string name="newsboy_name">Newsboy name</string>
    <string name="save_newsboy_title">Registrar Canillita</string>
    <string name="newsboy_name_description">Nombre</string>
    <string name="save_description">Guardar</string>
    <string name="add_newsboy">Add newsboy</string>
    <string name="return_description">Devolver</string>
    <string name="zero_number">0</string>
    <string name="quantity">Devoluc.</string>
    <string name="save_item_title">Guardar Item</string>
    <string name="price_description">Precio</string>
    <string name="quantity_description">Cantidad</string>
    <string name="collectable_description">Coleccionable</string>
    <string name="add_item">Add item</string>
    <string name="add">Agregar</string>
    <string name="reception_title">Guardar Recepción</string>
    <string name="delivery_title">Guardar Entrega</string>
    <string name="return_title">Guardar Devolución</string>
</resources>